--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -30,6 +30,12 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
+      - name: Snyk Code Test
+        run: snyk code test ./angular/simple-app
+        continue-on-error: true  # Don't fail the workflow on vulnerabilities
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
       # Monitor the project in Snyk
      # - name: Monitor Project in Snyk
       #  uses: snyk/actions/node@master
