--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -30,8 +30,14 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
-      - name: Snyk Code Test
+      - name: Snyk Code Test Angular
         run: snyk code test ./angular/simple-app
+        continue-on-error: true  # Don't fail the workflow on vulnerabilities
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
+      - name: Snyk Code Test Angularjs
+        run: snyk code test ./angularjs/simple-app
         continue-on-error: true  # Don't fail the workflow on vulnerabilities
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
