--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -48,6 +48,12 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
+      - name: Snyk Test dotnetcore
+        run: snyk test ./dotnetcore/WebAppRazor
+        continue-on-error: true  # Don't fail the workflow on vulnerabilities
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }} 
+
       # Monitor the project in Snyk
      # - name: Monitor Project in Snyk
       #  uses: snyk/actions/node@master
