--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -48,6 +48,9 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
+      - name: Restore Dependencies
+        run: dotnet restore ./dotnetcore/WebAppRazor
+
       - name: Snyk Test dotnetcore
         run: snyk test ./dotnetcore/WebAppRazor
         continue-on-error: true  # Don't fail the workflow on vulnerabilities
