--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -24,28 +24,7 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
       - name: Restore Dependencies for All Projects
-        run: |
-          echo "Restoring dependencies for Angular, AngularJS, .NET, Node.js, and .NET Core"
-          
-          # Restore .NET & .NET Core dependencies
-          if [ -f "dotnetcore/WebAppRazor/WebAppRazor" ]; then
-            dotnet restore dotnetcore/WebAppRazor/WebAppRazor
-          fi
-          if [ -f "dotnet/WebApp45/WebApp45" ]; then
-            dotnet restore dotnet/WebApp.csproj
-          fi
-      
-          # Restore Node.js & Angular dependencies
-          if [ -f "angular/simple-app" ]; then
-            cd angular && npm install && cd ..
-          fi
-          if [ -f "nodejs/simple-app" ]; then
-            cd nodejs && npm install && cd ..
-          fi
-          if [ -f "angularjs/simple-app" ]; then
-            cd angularjs && npm install && cd ..
-          fi
-        shell: bash
+        run: dotnet restore ./dotnetcore/WebAppRazor/WebAppRazor && dotnet restore dotnet/WebApp45/WebApp45 && cd angular/simple-app && npm install && cd nodejs/simple-app && npm install && cd angularjs/simple-app && npm install
       
       - name: Snyk Dependencies Test
         run: snyk test --all-projects
